<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        app:layout_constraintVertical_bias="0"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:padding="16dp">

                <Switch
                    android:id="@+id/isTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:padding="16dp">

                <Switch
                    android:id="@+id/isDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:padding="16dp">

                <Switch
                    android:id="@+id/isBattery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/battery"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:padding="16dp">

                <Switch
                    android:id="@+id/isTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:padding="16dp">

                <Switch
                    android:id="@+id/isRainbow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rainbow"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:padding="16dp">

                        <Switch
                            android:id="@+id/isPacman"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pacman"
                            android:textColor="#616161"
                            android:textSize="18sp"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:padding="16dp">

                        <Switch
                            android:id="@+id/isJalali"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/georgian"
                            android:textColor="@color/gray"
                            android:textSize="18sp"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>

    </GridLayout>



</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>