<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/bg_grad"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/vi_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.8"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_sync_24"
            android:text="@string/sync"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_pager"
            app:borderWidth="0dp"
            app:maxImageSize="40dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/adjust"
            android:layout_width="wrap_content"
            app:borderWidth="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_adjust_24"
            android:text="@string/adjust"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@id/sync"
            app:layout_constraintTop_toBottomOf="@+id/view_pager"
            app:maxImageSize="40dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/operate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_play_arrow_24"
            android:tooltipText="@string/adjust"
            android:textColor="@color/gray"
            app:borderWidth="0dp"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sync"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_pager"
            app:maxImageSize="40dp" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/batteryPercentage"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:progress="5"
                android:rotation="225"
                app:indicatorColor="#D81616"
                app:indicatorSize="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:trackColor="#00FFFFFF"
                app:trackCornerRadius="6dp"
                app:trackThickness="6dp" />

            <TextView
                android:id="@+id/batteryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NA°"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/batteryPercentage"
                app:layout_constraintStart_toStartOf="@+id/batteryPercentage"
                app:layout_constraintTop_toTopOf="@+id/batteryPercentage" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/temperaturePercentage"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:progress="5"
                android:rotation="225"
                app:indicatorColor="#D81616"
                app:indicatorSize="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:trackColor="#00FFFFFF"
                app:trackCornerRadius="6dp"
                app:trackThickness="6dp" />

            <TextView
                android:id="@+id/temperatureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NA%"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/temperaturePercentage"
                app:layout_constraintStart_toStartOf="@+id/temperaturePercentage"
                app:layout_constraintTop_toTopOf="@+id/temperaturePercentage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:textAlignment="center"
        android:id="@+id/status"
        android:layout_width="360dp"
        android:layout_height="42dp"
        android:fontFamily="serif"
        android:text="@string/connecting"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>